Handle register post request

--- a/templates/register.html
+++ b/templates/register.html
@@ -9,12 +9,8 @@
       <legend> Twitter credentials </legend>
       <ul>
          <li>
-            <label for="username">User:</label>
-            <input type="text" id="user" name="username" class="field"/>
-        </li>
-        <li>
-         <label for="email">E-mail:</label>
-         <input type="email" id="email" name="email" class="field"/>
+            <label for="user_name">*User:</label>
+            <input type="text" id="user" name="user_name" class="field"/>
         </li>
         <li><input type="submit" value="submit" class="button"/></li>
       </ul>
