--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,8 @@
         <ul id="nav">
             <li><a href="/">Home</a></li> | 
             <li><a href="/register/">Register</a></li> | 
-            <li><a href="/vote/">Vote</a></li>
+            <li><a href="/vote/">Vote</a></li> |
+            <li><a href="/about/">About</a></li>
         </ul>
         {% endblock %}
 
