Add ability to bring back tweets from friends - Right now this is really rough b/c it's just dumping the raw json to the screen since I'm tired

--- a/templates/vote.html
+++ b/templates/vote.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <p>Voting not implemented yet.</p>
+    {% if msg %}
+        <p>{{msg}}</p>
+    {% else %}
+        <p>Voting for {{user_name}} not implemented yet.</p>
+    {% endif %}
+        <p>{{result}}</p>
 {% endblock %}
