--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Stream Quality</title>
+        <title>{% block title %} Stream Quality {% endblock %}</title>
         <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
     </head>
 
