Add link to user profile, css refactoring

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,9 +9,18 @@
 }
 
 
+ul.tweet_list {
+    list-style-type: none;
+}
+
 .vote_tweet {
 }
 
-.vote_tweet a {
+ul.tweet_list li {
+    border-bottom: 1px solid #000;
+    padding: .5em;
+}
+
+ul.tweet_list li a {
     padding: .5em;
 }
