Add blocks for extra style and javascript

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
 <html>
     <head>
         <title>{% block title %} Stream Quality {% endblock %}</title>
+        {% block script %} {% endblock %}
+        {% block extrastyle %} {% endblock %}
         <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
     </head>
 
