--- a/templates/vote.html
+++ b/templates/vote.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block script %}
+    <script type="text/javascript" src="/static/js/jquery-1.5.2.min.js"></script>
+{% endblock %}
+
 {% block title %} {{user_name}}'s imperfect stream {% endblock %}
 {% block content %}
     {% for tweet in tweets %}
