--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,13 @@
     <body>
         {% block nav %}
         <ul id="nav">
-            <li><a href="/">Home</a></li> | 
-            <li><a href="/register/">Register</a></li> | 
-            <li><a href="/vote/">Vote</a></li> |
+            <li><a href="/">Home</a> | </li>
+            <li><a href="/register/">Register</a> | </li>
+            <li><a href="/vote/">Vote</a> | </li>
             <li><a href="/about/">About</a></li>
+            {% if logged_in %}
+                <li> | <a href="/logout/">Logout</a></li>
+            {% endif %}
         </ul>
         {% endblock %}
 
