--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,7 @@
 
 {% block content %}
     <p>Hello</p>
-    <a href="/signin/"><img src="/static/img/twitter_signin.png" width="151" height="24"/></a>
+    <a href="/signin/">
+        <img src="/static/img/twitter_signin.png" width="151" height="24"/>
+    </a>
 {% endblock %}
