Add ability to view current vote on existing tweets
- Add debug setting for local testing without logging in since signin can't
  send back to a localhost address.

--- a/templates/vote.html
+++ b/templates/vote.html
@@ -23,6 +23,7 @@
                     {{tweet.user.screen_name}}</a> {{tweet.user.name}}
                 </div>
                 <div>{{tweet.text}}</div>
+                <div>Vote:{{tweet.vote_cnt}}</div>
                 <a href="#" onclick="tweet_vote('{{user_name}}',
                                             '{{tweet.id}}', 'up');">up</a>
                 <a href="#" onclick="tweet_vote('{{user_name}}',
