Add link to myvotes in base template based on logged in user name
- Make myvotes template, view, etc. take name of logged in user and optionally
  the name to filter votes by.

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,10 @@
         <ul id="nav">
             <li><a href="/">Home</a> | </li>
             <li><a href="/register/">Register</a> | </li>
-            <li><a href="/vote/">Vote</a> | </li>
             <li><a href="/about/">About</a></li>
             {% if logged_in %}
+                <li> | <a href="/vote/{{logged_in_user}}/">Vote</a></li>
+                <li> | <a href="/myvotes/{{logged_in_user}}/">My votes</a></li>
                 <li> | <a href="/logout/">Logout</a></li>
             {% endif %}
         </ul>
