--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
             <li><a href="/">Home</a> | </li>
             <li><a href="/register/">Register</a> | </li>
             <li><a href="/about/">About</a></li>
-            {% if logged_in %}
+            {% if logged_in_user %}
                 <li> | <a href="/vote/{{logged_in_user}}/">Vote</a></li>
                 <li> | <a href="/myvotes/{{logged_in_user}}/">My votes</a></li>
                 <li> | <a href="/logout/">Logout</a></li>
