--- a/templates/myvotes.html
+++ b/templates/myvotes.html
@@ -7,8 +7,11 @@
             <ul class="tweet_list">
         {% endif %}
 
-        <li><a href="/myvotes/{{logged_in_user}}/{{author.0}}">{{author.0}}</a> -- {{author.1}}</li>
-
+        <li>
+            <a href="/myvotes/{{logged_in_user}}/{{author.0}}">{{author.0}}</a>
+                -- {{author.1}}
+            <a href="/unfollow/{{author.0}}/">Unfollow</a>
+        </li>
         {% if forloop.last %}
             </ul>
         {% endif %}
