Refactor out user_name argument in all voting code

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
             <li><a href="/register/">Register</a> | </li>
             <li><a href="/about/">About</a></li>
             {% if logged_in_user %}
-                <li> | <a href="/vote/{{logged_in_user}}/">Vote</a></li>
-                <li> | <a href="/myvotes/{{logged_in_user}}/">My votes</a></li>
+                <li> | <a href="/vote/">Vote</a></li>
+                <li> | <a href="/myvotes/">My votes</a></li>
                 <li> | <a href="/logout/">Logout</a></li>
             {% endif %}
         </ul>
