--- a/templates/myvotes.html
+++ b/templates/myvotes.html
@@ -8,7 +8,7 @@
         {% endif %}
 
         <li>
-            <a href="/myvotes/{{logged_in_user}}/{{author.0}}">{{author.0}}</a>
+            <a href="/myvotes/{{author.0}}">{{author.0}}</a>
                 -- {{author.1}}
             <a href="/unfollow/{{author.0}}/">Unfollow</a>
         </li>
