--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <p>Hello</p>
+    <p>Welcome to Stream Quality.</p>
+    <p>
+        The point of this micro-app is to help existing twitter users easily
+        see which twitter friends aren't adding any value to their stream.
+        This way users can 'trim the fat' from their streams and get back to
+        work instead of sifting through useless tweets.
+    </p>
     {% if not logged_in_user %}
-    <a href="/signin/">
-        <img src="/static/img/twitter_signin.png" width="151" height="24"/>
-    </a>
+        <a href="/signin/">
+            <img src="/static/img/twitter_signin.png" width="151" height="24"/>
+        </a>
     {% endif %}
 {% endblock %}
