'Add' filter throws error if page variable doesn't exist

--- a/templates/vote.html
+++ b/templates/vote.html
@@ -37,5 +37,9 @@
             </ul>
         {% endif %}
     {% endfor %}
-    <a href="/vote/{{page|add:"1"}}/">next</a>
+
+    {% if page %}
+        <a href="/vote/{{page|add:"1"}}/">next</a>
+    {% endif %}
+
 {% endblock %}
