--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
             <li><a href="/register/">Register</a> | </li>
             <li><a href="/about/">About</a></li>
             {% if logged_in_user %}
-                <li> | <a href="/vote/">Vote</a></li>
+                <li> | <a href="/vote/1/">Vote</a></li>
                 <li> | <a href="/myvotes/">My votes</a></li>
                 <li> | <a href="/logout/">Logout</a></li>
             {% endif %}
