--- a/templates/myvotes.html
+++ b/templates/myvotes.html
@@ -4,7 +4,7 @@
 {% block content %}
     {% for author in votes.items %}
         {% if forloop.first %}
-            <ul class="tweet_list">
+            <ul id="tweet_list">
         {% endif %}
 
         <li>
