--- a/templates/vote.html
+++ b/templates/vote.html
@@ -24,7 +24,7 @@
 {% block content %}
     {% for tweet in tweets %}
         {% if forloop.first %}
-            <ul class="tweet_list">
+            <ul id="tweet_list">
         {% endif %}
             <li>
                 <div>
