Add 'more' link to bottom of vote page and populate new tweets with ajax

--- a/templates/vote.html
+++ b/templates/vote.html
@@ -13,8 +13,10 @@
         function load_tweets(page) {
             $.getJSON("/vote/" + page + "/json",
                 function(json) {
-                    alert(json['tweets'][0]['text']);
-                    $('#tweet_list').append(json['tweets'][0]['text']);
+                    $('#tweet_list').append(json['html']);
+
+                    $('#next_page').html('<a href="#" onclick="load_tweets(' +
+                                         json['page'] + ');">more</a>');
                 });
         }
     </script>
