--- a/templates/vote.html
+++ b/templates/vote.html
@@ -13,10 +13,12 @@
         function load_tweets(page) {
             $.getJSON("/vote/" + page + "/json",
                 function(json) {
+                    $("#last").remove();
+                     $('#tweet_list').append('<div id="last"></div>');
                     $('#tweet_list').append(json['html']);
-
                     $('#next_page').html('<a href="#" onclick="load_tweets(' +
                                          json['page'] + ');">more</a>');
+                    document.location = '#last';
                 });
         }
     </script>
@@ -30,6 +32,7 @@
         {% endif %}
             {% include "tweet_vote.html" %}
         {% if forloop.last %}
+            <div id="last"></div>
             </ul>
         {% endif %}
     {% endfor %}
