Set focus back to tweet that was voted on after voting completes
- Still not rock solid, and suffers from the same jumpy problem as the 'more'
  link, but hopefully will find better solution soon.

--- a/templates/vote.html
+++ b/templates/vote.html
@@ -8,6 +8,7 @@
                 function(json) {
                     var tweet = $("#" + json['id']);
                     tweet.html('Vote:' + json['vote_cnt']);
+                    document.location = '#' + tweet_id;
                 });
         }
         function load_tweets(page) {
