--- a/templates/vote.html
+++ b/templates/vote.html
@@ -15,11 +15,10 @@
             $.getJSON("/vote/" + page + "/json",
                 function(json) {
                     $("#last").remove();
-                     $('#tweet_list').append('<div id="last"></div>');
-                    $('#tweet_list').append(json['html']);
-                    $('#next_page').html('<a href="#" onclick="load_tweets(' +
+                    $('#tweet_list').append(json['html']).fadeIn();
+                    $('#tweet_list').append('<div id="last"></div>');
+                    $('#next_page').html('<a href="#last" onclick="load_tweets(' +
                                          json['page'] + ');">more</a>');
-                    document.location = '#last';
                 });
         }
     </script>
@@ -39,7 +38,7 @@
     {% endfor %}
 
     <div id="next_page">
-        <a href="#" onclick="load_tweets({{page}});">more</a>
+        <a href="#last" onclick="load_tweets({{page}});">more</a>
     </div>
 
 {% endblock %}
